[gd_scene load_steps=4 format=2]

[ext_resource path="res://GameComponents/ArenaBackgrounds/scenes/Sky/scenes/moving_clouds.gd" type="Script" id=1]
[ext_resource path="res://Assets/ArenaBackgrounds/scenes/Sky/art/clouds_front.png" type="Texture" id=2]
[ext_resource path="res://Assets/ArenaBackgrounds/scenes/Sky/art/clouds_back.png" type="Texture" id=3]

[node name="MovingClouds" type="Node2D"]
script = ExtResource( 1 )

[node name="BackCloudSprites" type="Node2D" parent="."]
z_index = -1

[node name="CloudsSprite0" type="Sprite" parent="BackCloudSprites"]
position = Vector2( -640, 100 )
texture = ExtResource( 3 )

[node name="CloudsSprite1" type="Sprite" parent="BackCloudSprites"]
position = Vector2( 640, 100 )
texture = ExtResource( 3 )

[node name="CloudsSprite2" type="Sprite" parent="BackCloudSprites"]
position = Vector2( 1920, 100 )
texture = ExtResource( 3 )

[node name="FrontCloudSprites" type="Node2D" parent="."]

[node name="CloudsSprite0" type="Sprite" parent="FrontCloudSprites"]
position = Vector2( -640, 100 )
texture = ExtResource( 2 )

[node name="CloudsSprite1" type="Sprite" parent="FrontCloudSprites"]
position = Vector2( 640, 100 )
texture = ExtResource( 2 )

[node name="CloudsSprite2" type="Sprite" parent="FrontCloudSprites"]
position = Vector2( 1920, 100 )
texture = ExtResource( 2 )
